Поменял пути в package.json

--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "agribest",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "AgriBest OPT",
   "main": "index.php",
   "scripts": {
     "test": "editorconfig-checker",
-    "send_r": "scp -C *.php *.png *.css stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest",
-    "mk_part_carbon": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p stanis9y.beget.tech/public_html/wp-content/themes/agribest/template-parts\"",
-    "send_carbon": "scp -C -r carbon-fields stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/carbon-fields",
-    "mk_part_dir": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p stanis9y.beget.tech/public_html/wp-content/themes/agribest/template-parts\"",
-    "send_part": "scp -r template-parts stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/",
-    "mk_part_img": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p stanis9y.beget.tech/public_html/wp-content/themes/agribest/img\"",
-    "send_img": "scp -r img stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/",
-    "mk_part_js": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p stanis9y.beget.tech/public_html/wp-content/themes/agribest/js\"",
-    "send_js": "scp -r js stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/",
-    "mk_part_css": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p stanis9y.beget.tech/public_html/wp-content/themes/agribest/css\"",
-    "send_css": "scp -C -r css stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/css",
-    "mk_part_fonts": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p stanis9y.beget.tech/public_html/wp-content/themes/agribest/fonts\"",
-    "send_ms": "scp -C *.css stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/",
-    "send_fonts": "scp -C -r fonts stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/fonts",
-    "send_head": "scp -C header.php stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/",
-    "send_func": "scp -C functions.php stanis9y_all@stanis9y.beget.tech:stanis9y.beget.tech/public_html/wp-content/themes/agribest/",
+    "send_r": "scp -C *.php *.png *.css stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest",
+    "mk_part_carbon": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p agribest.ru/public_html/wp-content/themes/agribest/template-parts\"",
+    "send_carbon": "scp -C -r carbon-fields stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/carbon-fields",
+    "mk_part_dir": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p agribest.ru/public_html/wp-content/themes/agribest/template-parts\"",
+    "send_part": "scp -r template-parts stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
+    "mk_part_img": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p agribest.ru/public_html/wp-content/themes/agribest/img\"",
+    "send_img": "scp -r img stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
+    "mk_part_js": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p agribest.ru/public_html/wp-content/themes/agribest/js\"",
+    "send_js": "scp -r js stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
+    "mk_part_css": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p agribest.ru/public_html/wp-content/themes/agribest/css\"",
+    "send_css": "scp -C -r css stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/css",
+    "mk_part_fonts": "ssh stanis9y_all@stanis9y.beget.tech \"mkdir -p agribest.ru/public_html/wp-content/themes/agribest/fonts\"",
+    "send_ms": "scp -C *.css stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
+    "send_fonts": "scp -C -r fonts stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/fonts",
+    "send_head": "scp -C header.php stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
+    "send_func": "scp -C functions.php stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
     "send_all": "npm run send_r & npm run send_css & npm run send_part & npm run send_img & npm run send_js & npm run send_fonts & npm run send_carbon"
     
   },
-  "repository": {
+  "repository": { 
     "type": "git",
     "url": "git+https://github.com/asmi046/agribest_wp.git"
   },
