Новая ссылка сбера +

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "send_fonts": "scp -C -r fonts stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/fonts",
     "send_head": "scp -C header.php stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
     "send_func": "scp -C functions.php stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
+    "send_index": "scp -C index.php stanis9y_all@stanis9y.beget.tech:agribest.ru/public_html/wp-content/themes/agribest/",
     "send_all": "npm run send_r & npm run send_css & npm run send_part & npm run send_img & npm run send_js & npm run send_fonts & npm run send_carbon"
     
   },
